[gd_scene load_steps=17 format=3 uid="uid://cnogv6jj3w1jh"]

[ext_resource type="Texture2D" uid="uid://cgxapmo3v4npm" path="res://Assets/farmingTilesheetComplete.png" id="1_4a1rj"]
[ext_resource type="Script" path="res://Environment/GrowingZone.gd" id="1_n0xf3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iiu57"]
atlas = ExtResource("1_4a1rj")
region = Rect2(64, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_48laf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiu57")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4npl"]
size = Vector2(12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_a461c"]
atlas = ExtResource("1_4a1rj")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq41f"]
atlas = ExtResource("1_4a1rj")
region = Rect2(192, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1csw"]
atlas = ExtResource("1_4a1rj")
region = Rect2(176, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wukn"]
atlas = ExtResource("1_4a1rj")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmqs7"]
atlas = ExtResource("1_4a1rj")
region = Rect2(160, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t53q"]
atlas = ExtResource("1_4a1rj")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt57f"]
atlas = ExtResource("1_4a1rj")
region = Rect2(160, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwg6i"]
atlas = ExtResource("1_4a1rj")
region = Rect2(128, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_553hm"]
atlas = ExtResource("1_4a1rj")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3olye"]
atlas = ExtResource("1_4a1rj")
region = Rect2(96, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xupc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a461c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1csw")
}],
"loop": true,
"name": &"berry_growing",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wukn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmqs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t53q")
}],
"loop": false,
"name": &"carrot_growing",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt57f")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwg6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_553hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3olye")
}],
"loop": true,
"name": &"onion_growing",
"speed": 0.0
}]

[node name="GrowingZone" type="StaticBody2D"]
script = ExtResource("1_n0xf3")

[node name="Ground" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 24)
sprite_frames = SubResource("SpriteFrames_48laf")

[node name="Area" type="Area2D" parent="Ground"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Area"]
shape = SubResource("RectangleShape2D_o4npl")

[node name="Plant" type="AnimatedSprite2D" parent="Ground"]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_xupc1")
animation = &"none"

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Ground/Area" to="." method="_on_area_area_entered"]
[connection signal="input_event" from="Ground/Area" to="." method="_on_area_input_event"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
